fix smooth scroll jump on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -121,12 +121,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-text-container {
-    margin-top: 20vh;
+    margin-top: 10vh;
 }
 
 .hero-sub-text {
     background: rgba(255, 255, 255, 0.6);
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 5px 30px;
     font-weight: 200;
 }
@@ -136,14 +136,22 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 40px;
     font-weight: 800;
     text-shadow: 1px 1px 2px #111;
-    font-size: 6rem;
+    font-size: 3rem;
 }
 
-/* @media (min-width: 768px) {
-    .hero-main-text {
-        font-size: 4rem;
+@media (min-width: 768px) {
+    .hero-text-container {
+        margin-top: 20vh;
     }
-} */
+
+    .hero-sub-text {
+        font-size: 2rem;
+    }
+
+    .hero-main-text {
+        font-size: 6rem;
+    }
+}
 
 .hero-button {
     margin: 10px;
